--- a/MusicDownload/templates/MusicDownload/track.html
+++ b/MusicDownload/templates/MusicDownload/track.html
@@ -1,1 +1,6 @@
 <h1>Track</h1>
+<h3>
+{{ selected_track.track_name }}</h3>
+<form action="/download/{{ selected_track.pk }}" method="GET">
+    <input id="submit" type="submit" value="Download" />
+</form>
