--- a/MusicDownload/templates/MusicDownload/base.html
+++ b/MusicDownload/templates/MusicDownload/base.html
@@ -64,14 +64,14 @@
 
 
     </head>
-    <body  style="height:1000px; " >
+    <body  style="height:800px; " >
 
     <div id="container">
 
     {% if page_variable != "home" %}
    
-    <div id="header">
-        <div id = "logo" style="height:20px; background-color: cyan;"> Music Store </div>
+    <div id="header" style="height:80px; background-color: black;">
+        <div id = "logo" style="height:50px; background-color: black; font-size:40px; font-weight: 4; padding-left: 20px; padding-top: 10px"> Music Store </div>
     </div>
 
     {% else %}
@@ -81,16 +81,16 @@
         <!-- <div id = "logo"> Logo(add image) </div> -->
         <div class="container-fluid">
           <br>
-          <h1>Music Store</h1>
+          <h1 style="font-size: 70px;">Music Store</h1>
         </div>
     </div>    
     
     {% endif %}
 
-    <div>
+    
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="#">WCMS</a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="/#header">HOME</a>
@@ -99,12 +99,6 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">GENRE</a>
               <i class="fa fa-caret-down"></i>      
               <div class="dropdown-menu"> 
-
-               <!--  <a class="dropdown-item" href="#">Trance</a>
-                <a class="dropdown-item" href="#">Bollywood</a>
-                <a class="dropdown-item" href="#">Marathi</a>
-                <a class="dropdown-item" href="#">House</a>
-                <a class="dropdown-item" href="#">Pop</a> -->
 
                 {%for genre in all_genres%}
                     <a class="dropdown-item" href="/genre/{{ genre.pk }}">{{ genre.genre_name }}</a>
@@ -115,8 +109,9 @@
                 <a class="nav-link" href="/track-list">ALL TRACKS</a>
             </li>
         </ul>
+
       </nav>  
-      </div>  
+
     {% if page_variable == "home" %}
     {% block home %}
     {% endblock %}
@@ -138,7 +133,7 @@
     {% endif %}
 
      <!-- Change this footer too -->
-    <footer class="page-footer font-small blue pt-4">
+    <footer class="page-footer font-small blue pt-4 bg-dark">
 
     <!-- Footer Links -->
     <div class="container-fluid text-center text-md-left">
@@ -150,8 +145,8 @@
         <div class="col-md-6 mt-md-0 mt-3">
 
           <!-- Content -->
-          <h5 class="text-uppercase">Footer Content</h5>
-          <p>Sumedh Pratik Rohan</p>
+          <h5 class="text-uppercase">Created by</h5>
+          <p>Sumedh Patkar 3260<br>Pratik Kodolikar 3245<br>Rohan Kulkarni 3249</p>
 
         </div>
         <!-- Grid column -->
@@ -164,17 +159,17 @@
             <!-- Links -->
             <h5 class="text-uppercase">Links</h5>
 
-            <ul class="list-unstyled">
-              <li>
-                <a href="#!"><img class="img-fluid rounded" src="../../media/instagram.jpg" alt="" border="3" style="height: 10%;width: 10%"></a>
-              </li>
-              <li>
-                <a href="#!"><img class="img-fluid rounded" src="../../media/twitter.png" alt="" border="3" style="height: 10%;width: 10%"></a>
-              </li>
-              <li>
-                <a href="#!"><img class="img-fluid rounded" src="../../media/facebook.png" alt="" border="3" style="height: 10%;width: 10%"></a>
-              </li>
-            </ul>
+            <div class="row">
+              <div class = "col">
+                <a href="#!"><img class="img-fluid rounded" src="../../media/instagram.jpeg" alt="" border="3" style="height: 100%;width: 80%"></a>
+              </div>
+              <div class = "col">
+                <a href="#!"><img class="img-fluid rounded" src="../../media/twitter.jpg" alt="" border="3" style="height: 100%;width: 80%"></a>
+              </div>
+              <div class = "col">
+                <a href="#!"><img class="img-fluid rounded" src="../../media/facebook.png" alt="" border="3" style="height: 100%;width: 80%"></a>
+              </div>
+            </div>
 
           </div>
       </div>
