--- a/MusicDownload/templates/MusicDownload/home.html
+++ b/MusicDownload/templates/MusicDownload/home.html
@@ -3,15 +3,18 @@
 {% block home %}
 
 <div id="content_area" >
+  <br><br>
 	<div id = "site_info">
-		<h1> World Class Music Store </h1>
-		<p>Download from thousands of songs!</p>
-		<p>Play any song you like.</p>
-		<p>The best music store ever made!</p>
+
+		<h1 style= "font-size: 60px; padding-left: 40px;"> World Class Music Store </h1><br>
+		<p style= "font-size: 30px; padding-left: 40px;">Download from thousands of songs!</p>
+		<p style= "font-size: 30px; padding-left: 40px;">Play any song you like.</p>
+		<p style= "font-size: 30px; padding-left: 40px;">The best music store ever made!</p><br>
   </div>
 
+    <br>
   <div id="top_ten"> 
-    <h2>Top Ten Songs</h2>
+    <h1 style= "color: black; font-size: 60px; text-align: center">Top Ten</h1><br>
 
     {% for track in all_tracks.iterator %}
       
@@ -22,9 +25,9 @@
           <div class = "row ">
           {% endif %}
           
-           <div style = "border-style: groove; padding:10px; margin:10px; background-color: powderblue; height: 130px;" class = "col-md-3" >
+            <div style = " padding:15px; margin: 30px; background-color: #808080; height: 130px;" class = "col-md-3 bg-dark" >
               <img class = "img-fluid rounded h-100" src=" {{ track.track_image.url }}" %}" height = 100px width=100px>
-              <a style = "color: black; letter-spacing: 1px; font-family: Times New Roman;  font-size: 150%;" href = "/track/{{track.pk}}" >{{track.track_name}}</a>
+              <a style = "color: white; letter-spacing: 1px; font-family: Times New Roman;  font-size: 150%;" href = "/track/{{track.pk}}" >{{track.track_name}}</a>
            </div>
           
       {% endfor %}
